# project-marker

./: .gitignore  .goreleaser.yaml  Makefile  README.md  go.mod  go.sum  pyproject.toml
.github/: release-drafter.yml
.github/workflows/: ci.yml  release-drafter.yml  release.yml
cmd/projmark/: main.go  main_test.go  output.go  output_test.go
cmd/projmark/completions/: projmark.bash  projmark.fish  projmark.zsh
docs/: 01-migration.md  02-implementation.md  03-testing.md  release-setup.md
internal/config/: config.go  config_test.go  default.yaml
internal/engine/: indicators.go  indicators_test.go  registry.go  registry_test.go  rules.go  rules_test.go
internal/macostags/: tags.go  tags_stub.go  tags_test.go
internal/scanner/: scanner.go  scanner_test.go
src/: tag_projects.py
